Adjust wording for K8s versions that configure the aggregation layer by default

--- a/versions/latest/modules/en/pages/api/extension-apiserver.adoc
+++ b/versions/latest/modules/en/pages/api/extension-apiserver.adoc
@@ -8,7 +8,7 @@ Rancher extends Kubernetes with additional APIs by registering an extension API 
 
 The API aggregation layer must be configured on the local Kubernetes cluster for the `v1.ext.cattle.io` `APIService` to work correctly. If the `APIService` does not receive a registration request after the Rancher server starts, the pod crashes with a log entry indicating the error. If your pods are consistently failing to detect registration despite having a correctly configured cluster, you can increase the timeout by setting the `.Values.aggregationRegistrationTimeout` in Helm.
 
-All versions of Kubernetes supported in this Rancher version's Kubernetes distributions (RKE2/K3s) have the aggregation layer configured and enabled by default. However, if you suspect that your cluster configuration is incorrect, refer to the https://kubernetes.io/docs/tasks/extend-kubernetes/configure-aggregation-layer/[Kubernetes Aggregation Layer documentation] for information on configuring the aggregation layer.
+Starting in Rancher v2.12.0, all versions of Kubernetes supported by RKE2/K3s have the aggregation layer configured and enabled by default. However, if you suspect that your cluster configuration is incorrect, refer to the https://kubernetes.io/docs/tasks/extend-kubernetes/configure-aggregation-layer/[Kubernetes Aggregation Layer documentation] for information on configuring the aggregation layer.
 
 [NOTE]
 ====
