[2.10.9] deprecated features update
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.10/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.10/modules/en/pages/faq/deprecated-features.adoc
@@ -11,6 +11,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+| https://github.com/rancher/rancher/releases/tag/v2.10.9[2.10.9]
+| August 27, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.10.8[2.10.8]
 | July 30, 2025
 
