[2.9.11] deprecated features update
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.9/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.9/modules/en/pages/faq/deprecated-features.adoc
@@ -11,6 +11,9 @@ Rancher will publish deprecated features as part of the https://github.com/ranch
 |===
 | Patch Version | Release Date
 
+| https://github.com/rancher/rancher/releases/tag/v2.9.11[2.9.11]
+| Aug 27, 2025
+
 | https://github.com/rancher/rancher/releases/tag/v2.9.10[2.9.10]
 | May 22, 2025
 
