Add Helm instructions for Registering with SCC

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -21,20 +21,81 @@ You have the option to register your Rancher Manager instance with SCC <<online,
 
 === Online Registration
 
+You can register online through the Rancher UI or with Helm.
+
+==== Rancher UI
+
 . Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, go to **My Organizations** and click on the organization you want to access. 
 . Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*. 
 . Copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
+==== Helm
+
+In `values.yaml`, enable registration and add your registration code.
+
+[,yaml]
+----
+registration:
+  enabled: true
+  regCode: ""
+----
+
 === Offline Registration
 
-If you are using Rancher in an air-gapped environment, you can register offline. 
+If you are using Rancher in an air-gapped environment, you can register offline through the Rancher UI or with Helm.
+
+==== Rancher UI
 
 . Click *Download registration request* to download the registration request file.
 . Click *Visit SCC* to use the SCC offline registration tool. 
-. Upload the registration request file.
-. Select your *Organization* and *Subscription*.
-. Click *Download Offline Certificate*.
-. Return to your Rancher Manager UI, click **Upload certificate and register* to upload the offline certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+.. Upload the registration request file in SCC.
+.. Select your *Organization* and *Subscription*.
+.. Click *Download Offline Certificate* and save the registration certificate file.
+. Return to your Rancher Manager UI, click **Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+
+==== Helm
+
+. In `values.yaml`, enable registration and set the `mode` to `offline`.
++
+[,yaml]
+----
+registration:
+  enabled: true
+  regCode: ""
+  mode: offline
+----
+
+. Using `kubectl` get the registration request file and save the file locally.
++
+[,bash]
+----
+kubectl get secrets -n  cattle-scc-system \
+-l scc.cattle.io/secret-role=offline-request,scc.cattle.io/scc-hash=$(kubectl get secrets \
+-n cattle-scc-system scc-registration -o yaml|yq '.metadata.labels["scc.cattle.io/scc-hash"]') \
+-o yaml | yq '.items[0].data.request' > offline.base64
+----
++
+. Click *Visit SCC* to use the SCC offline registration tool. 
+.. Upload the registration request file.
+.. Select your *Organization* and *Subscription*.
+.. Click *Download Offline Certificate* and save the registration certificate file.
+. Upload the registration certificate file to your Rancher system using `kubectl` or Helm.
+
+* *`kubectl`:*
++
+[,bash]
+----
+kubectl patch secret -n cattle-scc-system scc-registration  \
+--type='merge' -p "{\"data\": {\"certificate\": \"$(cat <your Offline Cert file> )\"}}"
+----
+* *Helm:*
++
+Add your registration certificate using `certificate` value field and then `helm upgrade` Rancher.
++
+[,yaml]
+----
+certificate: {}
+----
 
 == Deregister from SUSE Customer Center
 
