--- a/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -6,35 +6,96 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 == Prequsities
 
-Registering your Rancher Manager instance with SUSE Customer Center requires a SUSE account. If you don't have a SUSE account yet, visit https://scc.suse.com/[SCC home page] to create one.
+Registering your Rancher Manager instance with SUSE Customer Center requires a SUSE account. If you don't have a SUSE account yet, visit the https://scc.suse.com/[SCC home page] to create one.
 
-You must also have access your organization. To join your organization, you may either:
+You must also have access to your organization. To join your organization, you may either:
 
 * Ask your organization's administrator to add you to the account. See our https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[documentation] for details.
 * If you know one of your organization's registration codes, enter it when prompted.
 
 == Register with SUSE Customer Center
 
-Check the Notification Center (bell icon) in the upper-right corner of your Rancher dashboard for a "Rancher Prime Registration" notification and click *Register Now*. You will be redirected to the *Registration* page under *Global Settings*. 
+Check the Notification Center (bell icon) in the upper-right corner of your Rancher dashboard for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. 
 
 You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI.
 
 === Online Registration
 
-. Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, go to **My Organizations** and click on the organization you want to access. 
+You can register online through the Rancher UI or with Helm.
+
+==== Rancher UI
+
+. Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, navigate to **My Organizations** and click on the organization with the Rancher Manager subscription. 
 . Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*. 
 . Copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
+==== Helm
+
+In `values.yaml`, enable registration and add your registration code.
+
+[,yaml]
+----
+registration:
+  enabled: true
+  regCode: ""
+----
+
 === Offline Registration
 
-If you are using Rancher in an air-gapped environment, you can register offline. 
+If you are using Rancher in an air-gapped environment, you can register offline through the Rancher UI or with Helm.
+
+==== Rancher UI
 
 . Click *Download registration request* to download the registration request file.
 . Click *Visit SCC* to use the SCC offline registration tool. 
-. Upload the registration request file.
-. Select your *Organization* and *Subscription*.
-. Click *Download Offline Certificate*.
-. Return to your Rancher Manager UI, click **Upload certificate and register* to upload the offline certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+.. Upload the registration request file.
+.. Select your *Organization* and *Subscription*.
+.. Click *Download Offline Certificate* and save the registration certificate file.
+. Return to your Rancher Manager UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+
+==== Helm
+
+. In `values.yaml`, enable registration and set the `mode` to `offline`.
++
+[,yaml]
+----
+registration:
+  enabled: true
+  regCode: ""
+  mode: offline
+----
+
+. Using `kubectl`, retrieve the registration request file and save it locally.
++
+[,bash]
+----
+kubectl get secrets -n  cattle-scc-system \
+-l scc.cattle.io/secret-role=offline-request,scc.cattle.io/scc-hash=$(kubectl get secrets \
+-n cattle-scc-system scc-registration -o yaml|yq '.metadata.labels["scc.cattle.io/scc-hash"]') \
+-o yaml | yq '.items[0].data.request' > offline.base64
+----
++
+. Click *Visit SCC* to use the SCC offline registration tool. 
+.. Upload the registration request file.
+.. Select your *Organization* and *Subscription*.
+.. Click *Download Offline Certificate* and save the registration certificate file.
+. Upload the registration certificate file to your Rancher system using `kubectl` or Helm.
+
+* *`kubectl`:*
++
+[,bash]
+----
+kubectl patch secret -n cattle-scc-system scc-registration  \
+--type='merge' -p "{\"data\": {\"certificate\": \"$(cat <your Offline Cert file> )\"}}"
+----
+* *Helm:*
++
+Add your registration certificate using the `certificate` value field, and then `helm upgrade` Rancher.
++
+[,yaml]
+----
+certificate: {}
+----
 
 == Deregister from SUSE Customer Center
 
