--- a/versions/latest/modules/en/pages/about-rancher/concepts.adoc
+++ b/versions/latest/modules/en/pages/about-rancher/concepts.adoc
@@ -8,13 +8,6 @@ This page explains concepts related to Kubernetes that are important for underst
 
 Docker is the container packaging and runtime standard. Developers build container images from Dockerfiles and distribute container images from Docker registries. https://hub.docker.com[Docker Hub] is the most popular public registry. Many organizations also set up private Docker registries. Docker is primarily used to manage containers on individual nodes.
 
-[NOTE]
-====
-
-Although Rancher 1.6 supported Docker Swarm clustering technology, it is no longer supported in Rancher 2.x due to the success of Kubernetes.
-====
-
-
 == About Kubernetes
 
 Kubernetes is the container cluster management standard. YAML files specify containers and other resources that form an application. Kubernetes performs functions such as scheduling, scaling, service discovery, health check, secret management, and configuration management.
@@ -23,7 +16,7 @@ Kubernetes is the container cluster management standard. YAML files specify cont
 
 A cluster is a group of computers that work together as a single system.
 
-A _Kubernetes Cluster_ is a cluster that uses the https://kubernetes.io/[Kubernetes container-orchestration system] to deploy, maintain, and scale Docker containers, allowing your organization to automate application operations.
+A _Kubernetes Cluster_ is a cluster that uses the https://kubernetes.io/[Kubernetes container-orchestration system] to deploy, maintain, and scale containers, allowing your organization to automate application operations.
 
 == Roles for Nodes in Kubernetes Clusters
 
