--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -2,7 +2,7 @@
 :revdate: 2025-08-19
 :page-revdate: {revdate}
 
-Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime Suite with https://scc.suse.com/home[SUSE Customer Center (SCC)] from the Rancher UI. This will enable you to see your registered systems in SCC under your subscription.
+Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime Suite with https://scc.suse.com/home[SUSE Customer Center (SCC)] from the Rancher UI or through Helm. This will enable you to see your registered systems in SCC under your subscription. 
 
 == Prequsities
 
@@ -31,7 +31,9 @@ You can register online through the Rancher UI or with Helm.
 
 ==== Helm
 
-In `values.yaml`, enable registration and add your registration code.
+Once you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the helm install command `helm install rancher rancher-prime/rancher`.
+
+You can also update `values.yaml`,  enabling registration and adding your registration code.
 
 [,yaml]
 ----
