Update instructions for navigating to Registration page

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -15,7 +15,7 @@ You must also have access to your organization. To join your organization, you m
 
 == Register with SUSE Customer Center
 
-Check the Notification Center (bell icon) in the upper-right corner of your Rancher dashboard for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. 
+From your Rancher Dashboard, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also go to *Global Settings* > *Registration*.
 
 You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI.
 
@@ -31,7 +31,7 @@ You can register online through the Rancher UI or with Helm.
 
 ==== Helm
 
-Once you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the helm install command `helm install rancher rancher-prime/rancher`.
+Once you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
 
 You can also update `values.yaml`,  enabling registration and adding your registration code.
 
