Update instructions for navigating to Registration page pt2

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -15,7 +15,7 @@ You must also have access to your organization. To join your organization, you m
 
 == Register with SUSE Customer Center
 
-From your Rancher Dashboard, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also go to *Global Settings* > *Registration*.
+From your Rancher Dashboard, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
 
 You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI.
 
