Sync Community PR #1928 (Remove RKE1 references: rotate certs and encryption keys)

--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-encryption-key.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-encryption-key.adoc
@@ -1,37 +1,12 @@
 = Encryption Key Rotation
-:revdate: 2025-03-04
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 :experimental:
 
-== RKE1 Encryption Key Rotation
-
-. Enable encryption key rotation with either of the following two options:
-** Select the `Enabled` radio button in the Rancher UI under menu:Cluster Options[Advanced Options > Secrets Encryption]:
-+
-image::rke1-enable-secrets-encryption.png[Enable Encryption Key Rotation]
-** OR, apply the following YAML:
-+
-[,yaml]
-----
- rancher_kubernetes_engine_config:
-   services:
-     kube_api:
-       secrets_encryption_config:
-         enabled: true
-----
-. Rotate keys in the Rancher UI:
-+
-2.1. Click *☰ > Cluster Management*.
-+
-2.2. Select *⋮ > Rotate Encryption Keys* on the far right of the screen next to your chosen cluster:
-+
-image::rke1-encryption-key.png[Encryption Key Rotation]
-
-== {rke2-product-name} Encryption Key Rotation
-
-_*New in v2.6.7*_
-
-IMPORTANT: Encryption key rotation is enabled by default and cannot be disabled.
+[IMPORTANT]
+====
+Encryption key rotation is enabled by default and cannot be disabled.
+====
 
 To rotate keys in the Rancher UI:
 
