Update iffline rancher UI instructions

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -48,12 +48,12 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 
 ==== Rancher UI
 
-. Click *Download registration request* to download the registration request file.
+. In the Rancher UI, click *Download registration request* to download the registration request file.
 . Click *Visit SCC* to use the SCC offline registration tool. 
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Return to your Rancher Manager UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. Return to your Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
 ==== Helm
 
