Use From the Rancher UI consistently / fix typos

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -17,7 +17,7 @@ You must also have access to your organization. To join your organization, you m
 
 From the Rancher UI, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
 
-You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI.
+You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI or through Helm.
 
 === Online Registration
 
@@ -27,7 +27,7 @@ You can register online through the Rancher UI or with Helm.
 
 . Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, navigate to **My Organizations** and click on the organization with the Rancher Manager subscription. 
 . Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*. 
-. Copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
 ==== Helm
 
@@ -48,12 +48,12 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 
 ==== Rancher UI
 
-. In the Rancher UI, click *Download registration request* to download the registration request file.
+. From the Rancher UI, click *Download registration request* to download the registration request file.
 . Click *Visit SCC* to use the SCC offline registration tool. 
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Return to your Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. Return to the Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
 ==== Helm
 
