Syncing en pages with community pr #1893
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
+++ b/versions/latest/modules/en/pages/about-rancher/architecture/communicating-with-downstream-clusters.adoc
@@ -1,5 +1,5 @@
 = Communicating with Downstream User Clusters
-:revdate: 2024-11-22
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 This section describes how Rancher provisions and manages the downstream user clusters that run your apps and services.
@@ -36,7 +36,7 @@ There is one cluster controller and one cluster agent for each downstream cluste
 * Watches for resource changes in the downstream cluster
 * Brings the current state of the downstream cluster to the desired state
 * Configures access control policies to clusters and projects
-* Provisions clusters by calling the required Docker machine drivers and Kubernetes engines, such as RKE and GKE
+* Provisions clusters by calling the required Docker machine drivers and Kubernetes engines, such as GKE
 
 By default, to enable Rancher to communicate with a downstream cluster, the cluster controller connects to the cluster agent. If the cluster agent is not available, the cluster controller can connect to a <<_3_node_agents,node agent>> instead.
 
@@ -58,7 +58,7 @@ The `cattle-node-agent` is deployed using a https://kubernetes.io/docs/concepts/
 An authorized cluster endpoint (ACE) allows users to connect to the Kubernetes API server of a downstream cluster without having to route their requests through the Rancher authentication proxy.
 
 ____
-ACE is available on RKE, RKE2, and K3s clusters that are provisioned or registered with Rancher. It's not available on  clusters in a hosted Kubernetes provider, such as Amazon's EKS.
+ACE is available on RKE2 and K3s clusters that are provisioned or registered with Rancher. It's not available on  clusters in a hosted Kubernetes provider, such as Amazon's EKS.
 ____
 
 There are two main reasons why a user might need the authorized cluster endpoint:
@@ -182,11 +182,8 @@ If you see an error related to "impersonation" in the UI, pay close attention to
 
 The files mentioned below are needed to maintain, troubleshoot and upgrade your cluster:
 
-* `rancher-cluster.yml`: The RKE cluster configuration file.
-* `kube_config_rancher-cluster.yml`: The Kubeconfig file for the cluster, this file contains credentials for full access to the cluster. You can use this file to authenticate with a Rancher-launched Kubernetes cluster if Rancher goes down.
-* `rancher-cluster.rkestate`: The Kubernetes cluster state file. This file contains credentials for full access to the cluster. Note: This state file is only created when using RKE v0.2.0 or higher.
-
-NOTE: The "rancher-cluster" parts of the two latter file names are dependent on how you name the RKE cluster configuration file.
+* `config.yaml`: The RKE2 and K3s cluster configuration file.
+* `rke2.yaml` or `k3s.yaml`: The Kubeconfig file for your RKE2 or K3s cluster. This file contains credentials for full access to the cluster. You can use this file to authenticate with a Rancher-launched Kubernetes cluster if Rancher goes down.
 
 For more information on connecting to a cluster without the Rancher authentication proxy and other configuration options, refer to the xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc[kubeconfig file] documentation.
 
@@ -198,13 +195,7 @@ The tools that Rancher uses to provision downstream user clusters depends on the
 
 Rancher can dynamically provision nodes in a provider such as Amazon EC2, DigitalOcean, Azure, or vSphere, then install Kubernetes on them.
 
-Rancher provisions this type of cluster using https://github.com/rancher/rke[RKE] and https://github.com/rancher/machine[docker-machine.]
-
-=== Rancher Launched Kubernetes for Custom Nodes
-
-When setting up this type of cluster, Rancher installs Kubernetes on existing nodes, which creates a custom cluster.
-
-Rancher provisions this type of cluster using https://github.com/rancher/rke[RKE.]
+Rancher provisions this type of cluster using https://github.com/rancher/machine[docker-machine.]
 
 === Hosted Kubernetes Providers
 
