--- a/versions/latest/modules/en/pages/cluster-admin/best-practices/disconnected-clusters.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/best-practices/disconnected-clusters.adoc
@@ -1,5 +1,5 @@
 = Best Practices for Disconnected Clusters
-:revdate: 2024-11-25
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 Rancher supports managing clusters that may not always be online due to network disruptions, control plane availability, or because all cluster nodes are down. At the moment there are no known issues with disconnected clusters in the latest released Rancher version.
@@ -12,4 +12,4 @@ While a managed cluster is disconnected from Rancher, management operations will
 
 * *Cleaning Up Disconnected Clusters*: Regularly remove clusters that will no longer reconnect to Rancher (e.g., clusters that have been decommissioned or destroyed). Keeping such clusters in the Rancher management system consumes unnecessary resources, which could impact Rancher's performance over time.
 
-* *Certificate Rotation Considerations*: When designing processes that involve regularly shutting down clusters, whether connected to Rancher or not, take into account certificate rotation policies. For example, RKE/RKE2/K3s clusters may rotate certificates on startup if they exceeded their lifetime.
+* *Certificate Rotation Considerations*: When designing processes that involve regularly shutting down clusters, whether connected to Rancher or not, take into account certificate rotation policies. For example, RKE2/K3s clusters may rotate certificates on startup if they exceeded their lifetime.
