--- a/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc
@@ -1,5 +1,5 @@
 = Tuning and Best Practices for {rancher-product-name} at Scale
-:revdate: 2025-06-04
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 This guide describes the best practices and tuning approaches to scale Rancher setups and the associated challenges with doing so. As systems grow, performance will naturally reduce, but there are steps that can minimize the load put on Rancher and optimize Rancher's ability to manage larger infrastructures.
@@ -61,7 +61,7 @@ You should remove any remaining legacy apps that appear in the Cluster Manager U
 
 === Using the Authorized Cluster Endpoint (ACE)
 
-An xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[Authorized Cluster Endpoint] (ACE) provides access to the Kubernetes API of Rancher-provisioned RKE, RKE2, and K3s clusters. When enabled, the ACE adds a context to kubeconfig files generated for the cluster. The context uses a direct endpoint to the cluster, thereby bypassing Rancher. This reduces load on Rancher for cases where unmediated API access is acceptable or preferable. See xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[Authorized Cluster Endpoint] for more information and configuration instructions.
+An xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[Authorized Cluster Endpoint] (ACE) provides access to the Kubernetes API of Rancher-provisioned RKE2 and K3s clusters. When enabled, the ACE adds a context to kubeconfig files generated for the cluster. The context uses a direct endpoint to the cluster, thereby bypassing Rancher. This reduces load on Rancher for cases where unmediated API access is acceptable or preferable. See xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[Authorized Cluster Endpoint] for more information and configuration instructions.
 
 === Reducing Event Handler Executions
 
