--- a/versions/v2.12/modules/en/pages/security/rancher-security-best-practices.adoc
+++ b/versions/v2.12/modules/en/pages/security/rancher-security-best-practices.adoc
@@ -1,5 +1,5 @@
 = {rancher-product-name} Security Best Practices
-:revdate: 2025-08-05
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 == Restrict Public Access to /version and /rancherversion Path
@@ -21,6 +21,6 @@ If you require such features, combine Layer 7 firewalls with xref:rancher-admin/
 You should protect the following ports behind an xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc#_layer_4_load_balancer[external load balancer] that has SSL offload enabled:
 
 * *K3s:* Port 6443, used by the Kubernetes API.
-* *RKE and RKE2:* Port 6443, used by the Kubernetes API, and port 9345, used for node registration.
+* *RKE2:* Port 6443, used by the Kubernetes API, and port 9345, used for node registration.
 
 These ports have TLS SAN certificates which list nodes' public IP addresses. An attacker could use that information to gain unauthorized access or monitor activity on the cluster. Protecting these ports helps mitigate against nodes' public IP addresses being disclosed to potential attackers.
