--- a/versions/v2.12/modules/en/pages/security/security-overview.adoc
+++ b/versions/v2.12/modules/en/pages/security/security-overview.adoc
@@ -1,5 +1,5 @@
 = {rancher-product-name} Security Guides
-:revdate: 2025-08-05
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 [pass]
@@ -66,7 +66,7 @@ Each version of the hardening guide is intended to be used with specific version
 
 The benchmark self-assessment is a companion to the Rancher security hardening guide. While the hardening guide shows you how to harden the cluster, the benchmark guide is meant to help you evaluate the level of security of the hardened cluster.
 
-Because Rancher and RKE install Kubernetes services as Docker containers, many of the control verification checks in the CIS Kubernetes Benchmark don't apply. This guide will walk through the various controls and provide updated example commands to audit compliance in Rancher created clusters. The original benchmark documents can be downloaded from the https://www.cisecurity.org/benchmark/kubernetes/[CIS website].
+This guide walks through the various controls and provide updated example commands to audit compliance in Rancher created clusters. The original benchmark documents can be downloaded from the https://www.cisecurity.org/benchmark/kubernetes/[CIS website].
 
 Each version of Rancher's self-assessment guide corresponds to specific versions of the hardening guide, Rancher, Kubernetes, and the CIS Benchmark.
 
