--- a/versions/v2.12/modules/zh/pages/security/rancher-security-best-practices.adoc
+++ b/versions/v2.12/modules/zh/pages/security/rancher-security-best-practices.adoc
@@ -1,5 +1,5 @@
 = {rancher-product-name} 安全最佳实践
-:revdate: 2025-08-05
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 == 限制对 /version 和 /rancherversion 的公共访问
@@ -15,3 +15,12 @@
 某些环境可能需要额外的安全控制来管理会话。例如，你可能希望限制用户的并发活动会话或限制可以从哪些地理位置发起这些会话。Rancher 默认情况下不支持这些功能。
 
 如果你需要此类功能，请将 7 层防火墙与xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc#_外部认证与本地认证[外部认证]结合使用。
+
+== Use External Load Balancers to Protect Vulnerable Ports
+
+You should protect the following ports behind an xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/layer-4-and-layer-7-load-balancing.adoc#_layer_4_load_balancer[external load balancer] that has SSL offload enabled:
+
+* *K3s:* Port 6443, used by the Kubernetes API.
+* *RKE2:* Port 6443, used by the Kubernetes API, and port 9345, used for node registration.
+
+These ports have TLS SAN certificates which list nodes' public IP addresses. An attacker could use that information to gain unauthorized access or monitor activity on the cluster. Protecting these ports helps mitigate against nodes' public IP addresses being disclosed to potential attackers.
