--- a/versions/latest/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/launch-kubernetes-with-rancher.adoc
@@ -1,5 +1,5 @@
 = Launching Kubernetes with {rancher-product-name}
-:revdate: 2025-07-02
+:revdate: 2025-08-22
 :page-revdate: {revdate}
 
 You can have Rancher launch a Kubernetes cluster using any nodes you want. When Rancher deploys Kubernetes onto these nodes, you can choose between https://rancher.com/docs/rke/latest/en/[Rancher Kubernetes Engine] (RKE) or https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[RKE2] distributions. Rancher can launch Kubernetes on any computers, including:
@@ -50,11 +50,15 @@ If you use RKE2 to set up a cluster, your nodes must meet the https://documentat
 
 === Launching Kubernetes on New Nodes in an Infrastructure Provider
 
-RKE2 provisioning is built on top of a new provisioning framework that leverages the upstream https://github.com/kubernetes-sigs/cluster-api[Cluster API] project. With this new provisioning framework, you can:
+RKE2 provisioning is built on top of a new provisioning framework that leverages the upstream https://github.com/kubernetes-sigs/cluster-api[Cluster API (CAPI)] project. With this new provisioning framework, you can:
 
 * Provision RKE2 clusters onto any provider for which Rancher has a node driver
 * Fully configure RKE2 clusters within Rancher
 * Choose CNI options Calico, Cilium, and Multus in addition to Canal
+
+When you make changes to your cluster configuration in RKE2, this may result in nodes reprovisioning. This is controlled by CAPI controllers and not by Rancher itself. Note that for etcd nodes, the same behavior does not apply.
+
+An example configuration change that may cause the described behavior is when editing a cluster and enabling drain before delete. In this scenario, the existing control plane nodes and worker are deleted and new nodes are created.
 
 RKE2 provisioning also includes installing RKE2 on clusters with Windows nodes.
 
