Add registration code steps to Prequsities section

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -6,18 +6,20 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 == Prequsities
 
-Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, visit the https://scc.suse.com/[SCC home page] to create one.
+* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, visit the https://scc.suse.com/[SCC home page] to create one.
 
-You must also have access to your organization. To join your organization, you may either:
+* You must have access to your organization. Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] for details. If you know your organization's registration code, enter it when prompted.
 
-* Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] for details.
-* If you know one of your organization's registration codes, enter it when prompted.
+* You must have the registration code for your Rancher Manager subscription on SCC. To get the registration code:
+. Log in to SCC.
+. Navigate to **My Organizations** and click on the organization with your Rancher Manager subscription.
+. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*.
 
 == Register with SUSE Customer Center
 
 From the Rancher UI, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
 
-You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>> from the Rancher UI or through Helm.
+You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>>.
 
 === Online Registration
 
@@ -25,8 +27,6 @@ You can register online through the Rancher UI or with Helm.
 
 ==== Rancher UI
 
-. Get the Registration code for your Rancher Manager subscription on SCC. Log in to SCC, navigate to **My Organizations** and click on the organization with the Rancher Manager subscription. 
-. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*. 
 . From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
 
 ==== Helm
