Remove regCode when registering offline with helm

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -57,13 +57,13 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 
 ==== Helm
 
-. In `values.yaml`, enable registration and set the `mode` to `offline`.
+. In `values.yaml`, enable registration, comment out `regCode` and set the `mode` to `offline`.
 +
 [,yaml]
 ----
 registration:
   enabled: true
-  regCode: ""
+# regCode: ""
   mode: offline
 ----
 
