--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -406,6 +406,7 @@
 **** xref:observability/istio/guides/use-istio-sidecar.adoc[]
 * API
 ** xref:api/quickstart.adoc[]
+** xref:api/workflows/kubeconfigs.adoc[]
 ** xref:api/workflows/projects.adoc[]
 ** xref:api/workflows/tokens.adoc[]
 ** xref:api/reference.adoc[]
