--- a/versions/v2.12/modules/en/pages/api/workflows/tokens.adoc
+++ b/versions/v2.12/modules/en/pages/api/workflows/tokens.adoc
@@ -1,6 +1,22 @@
 = Tokens
-:revdate: 2025-08-14
+:revdate: 2025-08-22
 :page-revdate: {revdate}
+
+== Token Resource
+
+Rancher has an imperative API resource `tokens.ext.cattle.io` that allows you to generate tokens for authenticating with Rancher.
+
+[,shell]
+----
+kubectl api-resources --api-group=ext.cattle.io
+----
+
+To get a description of the fields and structure of the Token resource, run:
+
+[,shell]
+----
+kubectl explain tokens.ext.cattle.io
+----
 
 == Feature Flag
 
@@ -12,6 +28,11 @@ kubectl patch feature ext-tokens -p '{"spec":{"value":false}}'
 ----
 
 == Creating a Token
+
+[CAUTION]
+====
+The Token value is only returned once in the `status.value` field.
+====
 
 Only a **valid and active** Rancher user can create a Token. Otherwise, you will get an error displayed (`Error from server (Forbidden)...`) when attempting to create a Token.
 
@@ -30,7 +51,7 @@ A Token is always created for the user making the request. Attempting to create 
 * The `spec.kind` field can be set to the kind of Token. The value `session` indicates a login Token. All other values, including the default empty string, indicate a kind of derived Token.
 * The `metadata.name` and `metadata.generateName` fields are ignored, and the name of the new Token is automatically generated using the prefix `token-`.
 +
-[bash]
+[,bash]
 ----
 kubectl create -o jsonpath='{.status.value}' -f -<<EOF
 apiVersion: ext.cattle.io/v1
@@ -42,7 +63,7 @@ EOF
 
 * If the `spec.ttl` is not specified, the Token is created with the expiration time defined in the `auth-token-max-ttl-minutes` setting. The default expiration time is 90 days. If `spec.ttl` is specified, it should be greater than 0 and less than or equal to the value of the `auth-token-max-ttl-minutes` setting expressed in milliseconds.
 +
-[bash]
+[,bash]
 ----
 kubectl create -o jsonpath='{.status.value}' -f -<<EOF
 apiVersion: ext.cattle.io/v1
