--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
@@ -1,5 +1,5 @@
 = Access a Cluster with Kubectl and kubeconfig
-:revdate: 2024-09-24
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 :description: Learn how you can access and manage your Kubernetes clusters using kubectl with kubectl Shell or with kubectl CLI and kubeconfig file. A kubeconfig file is used to configure access to Kubernetes. When you create a cluster with Rancher, it automatically creates a kubeconfig for your cluster.
 
@@ -47,13 +47,13 @@ Rancher will discover and show resources created by `kubectl`. However, these re
 
 == Authenticating Directly with a Downstream Cluster
 
-This section intended to help you set up an alternative method to access an xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[RKE cluster.]
+This section intended to help you set up an alternative method to access a xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched cluster].
 
-This method is only available for RKE, RKE2, and K3s clusters that have the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint] enabled. When Rancher creates the cluster, it generates a kubeconfig file that includes additional kubectl context(s) for accessing your cluster. This additional context allows you to use kubectl to authenticate with the downstream cluster without authenticating through Rancher. For a longer explanation of how the authorized cluster endpoint works, refer to xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[this page].
+This method is only available RKE2 and K3s clusters that have the xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc#_4_authorized_cluster_endpoint[authorized cluster endpoint] enabled. When Rancher creates the cluster, it generates a kubeconfig file that includes additional kubectl context(s) for accessing your cluster. This additional context allows you to use kubectl to authenticate with the downstream cluster without authenticating through Rancher. For a longer explanation of how the authorized cluster endpoint works, refer to xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[this page].
 
 On RKE2 and K3s clusters, you need to xref:cluster-deployment/register-existing-clusters.adoc#_authorized_cluster_endpoint_support_for_rke2_and_k3s_clusters[manually enable] authorized cluster endpoints.
 
-We recommend that as a best practice, you should set up this method to access your RKE, RKE2, and K3s clusters, so that just in case you can't connect to Rancher, you can still access the cluster.
+We recommend that as a best practice, you should set up this method to access your RKE2 and K3s clusters, so that just in case you can't connect to Rancher, you can still access the cluster.
 
 [NOTE]
 .Prerequisites:
@@ -74,7 +74,7 @@ CURRENT   NAME                        CLUSTER                     AUTHINFO     N
 
 In this example, when you use `kubectl` with the first context, `my-cluster`, you will be authenticated through the Rancher server.
 
-With the second context, `my-cluster-controlplane-1`, you would authenticate with the authorized cluster endpoint, communicating with an downstream RKE cluster directly.
+With the second context, `my-cluster-controlplane-1`, you would authenticate with the authorized cluster endpoint, communicating with an downstream RKE2/K3s cluster directly.
 
 We recommend using a load balancer with the authorized cluster endpoint. For details, refer to the xref:about-rancher/architecture/recommendations.adoc#_architecture_for_an_authorized_cluster_endpoint_ace[recommended architecture section.]
 
