Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -6,7 +6,7 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 == Prequsities
 
-* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, visit the https://scc.suse.com/[SCC home page] to create one.
+* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, [create one](https://www.suse.com/account/create/).
 
 * You must have access to your organization. Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] for details. If you know your organization's registration code, enter it when prompted.
 
@@ -19,7 +19,7 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 From the Rancher UI, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
 
-You have the option to register your Rancher Manager instance with SCC <<online,Online Registration>> or <<offline,Offline Registration>>.
+You have the option to register your Rancher Manager instance with SCC <<Online Registration,online>> or <<Offline Registration,offline>>.
 
 === Online Registration
 
@@ -27,11 +27,11 @@ You can register online through the Rancher UI or with Helm.
 
 ==== Rancher UI
 
-. From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. From the Rancher UI, copy the registration code into the *Registration code* field and click *Register*. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
 
 ==== Helm
 
-Once you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
+After you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
 
 You can also update `values.yaml`,  enabling registration and adding your registration code.
 
@@ -53,7 +53,7 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Return to the Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* will be *Active*, and the *Product Name*, *Expiration date* and *Registration mode* will be displayed.
+. Return to the Rancher UI, click *Upload certificate and register* to upload the registration certificate. If successful, the *Status* becomes *Active*, and the *Product Name*, *Expiration date* and *Registration mode* are displayed.
 
 ==== Helm
 
@@ -63,7 +63,7 @@ If you are using Rancher in an air-gapped environment, you can register offline 
 ----
 registration:
   enabled: true
-# regCode: ""
+  # regCode: ""
   mode: offline
 ----
 
